src/test/ui/rfc-2632-const-trait-impl/call-const-trait-method-fail.stderr
error[E0277]: the trait bound `u32: ~const Plus` is not satisfied
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^ the trait `~const Plus` is not implemented for `u32`
   |
note: the trait `Plus` is implemented for `u32`, but that implementation is not `const`
  --> $DIR/call-const-trait-method-fail.rs:25:7
   |
LL |     a.plus(b)
   |       ^^^^
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | pub const fn add_u32(a: u32, b: u32) -> u32 where u32: ~const Plus {
   |                                             ++++++++++++++++++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
